Update kinopoisk.ru data source

BUG: 447435
FIXED-IN: 3.4.3